--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -50,12 +50,8 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>ДАННЫЕ. Дата заполнения анкеты</div>
-                <div>
-                    <input type="text" id="data" name="data" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
-                </div>
-            </div>
+
+            <input type="hidden" id="data" name="data" />
 
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. ЧЕЛОВЕК, ЗАПОЛНИВШИЙ ИНФОРМАЦИЮ ОБ ЭТОМ МОЛОДОМ ЧЕЛОВЕКЕ</h2>
 
@@ -156,7 +152,7 @@
                         <label for="pi2-1" class="ms-2 text-sm text-gray-900">1. Мужской</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="pi2-2" type="radio" value="0" name="pi2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="pi2-2" type="radio" value="2" name="pi2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="pi2-2" class="ms-2 text-sm text-gray-900">2. Женский</label>
                     </div>
                 </div>
@@ -283,54 +279,51 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PI6. учреждение</div>
                 <div class="flex gap-4">
-                    <select id="pi6" name="pi6" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                    <select id="pi6i" name="pi6i" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
                     </select>
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI6a. Уникальный код учреждения</div>
-                <div>
-                    <input type="text" id="pi6a" name="pi6a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PI6b. Название учреждения</div>
                 <div>
-                    <input type="text" id="pi6b" name="pi6b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
+                    <input type="text" id="pi6n" name="pi6n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PI6c. Тип учреждения</div>
                 <div>
-                    <select id="pi6c" name="pi6c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option selected>--</option>
+                    <select id="pi6t" name="pi6t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
                         <optgroup label="Детские учреждения:">
-                            <option value="11">11. Дом Мехрибонлик</option>
-                            <option value="12">12. Дом-интернат Муруват для детей с инвалидностью</option>
-                            <option value="13">13. Дом семейного типа</option>
-                            <option value="14">14. SOS Детская деревня</option>
+                            <option value="12">12. детские «дома милосердия» - Мехрибонлик</option>
+                            <option value="13">13. Дома-Интернаты Для Детей С Инвалидностью «Мурувват»</option>
+                            <option value="14">14. SOS Детские деревни</option>
+                            <option value="15">15. Детские дома семейного типа</option>
                         </optgroup>
                         <optgroup label="Школа-интернат:">
-                            <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
-                            <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
-                            <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
-                            <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.</option>
-                            <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями.</option>
-                            <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.</option>
+                            <option value="21">21. I тип - школы-интернаты для глухих детей</option>
+                            <option value="22">22. Тип II - школы-интернаты для слабослышащих и тех, кто впоследствии потеряет слух</option>
+                            <option value="23">23. III тип - специализированные школы-интернаты для слепых детей “Нурли Маскан”</option>
+                            <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
+                            <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
+                            <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
+                            <option value="27">27. Тип VII - школы-интернаты для детей с задержкой психического развития</option>
+                            <option value="28">28. Тип VIII - поддержка школ-интернатов для детей с задержкой интеллектуального развития</option>
                         </optgroup>
                     </select>
                 </div>
             </div>
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PI7. Дата, когда молодой человек покинул систему опеки (дд/мм/гггг)</div>
                 <div>
                     <input type="text" id="pi7" name="pi7" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
             </div>
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PI8. Общее время пребывания в системе опеки<strong class="underline">(в месяцах)</strong></div>
                 <div>
@@ -989,7 +982,7 @@
                 <div>
                     EE12. Каков был общий доход молодого человека за последний месяц?
                 </div>
-                <div class="grid grid-cols-2 gap-4 items-center4">
+                <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="ee12_dk" type="checkbox" name="ee12_dk" value="9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-100 rounded">
                         <label for="ee12_dk" class="ms-2 text-sm text-gray-900">9. Не известно</label>
@@ -2086,6 +2079,11 @@
                 <div class="flex gap-4">
                     <textarea id="cr10" name="cr10" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
                 </div>
+            </div>
+
+            <div class="grid mt-10">
+                <label for="obs">OBS. Наблюдения</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
             </div>
 
 
